add dynamic manifest servlet
Signed-off-by: Kevin Haunschmied <darkc.futarialone@gmail.com>

--- a/bundles/org.openhab.ui.basic/src/main/resources/snippets/main.html
+++ b/bundles/org.openhab.ui.basic/src/main/resources/snippets/main.html
@@ -21,7 +21,7 @@
 		<link href="images/touch-icon-167.png" sizes="167x167" rel="apple-touch-icon-precomposed">
 		<link href="images/touch-icon-180.png" sizes="180x180" rel="apple-touch-icon-precomposed">
 
-		<link rel="manifest" href="manifest.json">
+		<link rel="manifest" href="manifest.json%sitemapquery%">
 
 		<link rel="stylesheet" type="text/css" href="mdl/material.min.css" />
 		<link rel="stylesheet" type="text/css" href="material-icons.css" />
