--- a/bundles/org.openhab.ui.basic/src/main/resources/snippets/main_static.html
+++ b/bundles/org.openhab.ui.basic/src/main/resources/snippets/main_static.html
@@ -10,11 +10,13 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="theme-color" content="#354497">
 
-		<link rel="shortcut icon" href="favicon.ico" />		
+		<link rel="shortcut icon" href="favicon.ico" />
 		<link rel="apple-touch-icon" href="images/app-icon.png" />
 		<link rel="apple-touch-startup-image" href="images/splash-ipad-h.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)" />
 		<link rel="apple-touch-startup-image" href="images/splash-ipad-v.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
-		<link rel="apple-touch-startup-image" href="images/splash-iphone.png" media="screen and (max-device-width: 320px)" />	   
+		<link rel="apple-touch-startup-image" href="images/splash-iphone.png" media="screen and (max-device-width: 320px)" />
+
+		<link rel="manifest" href="manifest.json">
 
 		<link rel="stylesheet" type="text/css" href="mdl/material.min.css" />
 		<link rel="stylesheet" type="text/css" href="material-icons.css" />
